# HouseWife

./: .env_sample  .gitattributes  .gitignore  Dockerfile  loadenv_yaml.py  pyproject.toml  requirements.txt  run.sh  run_lavalink.sh
lavalink/: application.yml  application_template.yml
src/: client.py  main.py  simple.py  wsgi.py
src/music/: music.py
src/utils/: format.py
tools/: loadenv_yaml.py
