[project]
authors = [
    {name = "microhum", email = "Guntee12123@gmail.com"},
]
name = "wife-music-bot"
version = "0.1.0"
description = "Multi-Usage Discord Bot For Being Your House Wife."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lyricsgenius>=3.2.0",
    "py-cord[speed]>=2.6.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "wavelink>=3.4.1",
]
